tests/fail/destruct_named_not_struct_fail.tk
shape Pair(i32, i32)

fn main() -> i32 {
    auto p = Pair(10, 20)
    // Named destructuring on a Tuple (illegal!)
    auto Pair(x = a, y = b) = p
    return 0
}
